Rollback in aws api change

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -12,7 +12,7 @@
     <img style="display: block;
                 margin: 0 auto;
                 margin-bottom:5%;"
-                src="../../assets/image/profile.jpg">
+                src="https://s3.amazonaws.com/wwww.weddingassist.me/1791e95d-5b22-421b-8312-b47f9f0e0f62.jpg">
   </ion-avatar>
 
     <ion-list *ngIf="userType == 0">
