--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -32,7 +32,7 @@
   </div>
   <div *ngIf='type == 0'>
     <ion-item *ngFor='let item of provideritems; trackBy: index;'>
-      <ion-icon name="settings" item-left large></ion-icon>
+      <ion-icon name="people" item-left large></ion-icon>
       <h1>{{item.providerName}}</h1>
       <p>Total de Leilões Ganhos:
         <ion-badge> {{item.totalOfWinnerBids}}</ion-badge>
