--- a/src/pages/bidDetail/bidDetail.html
+++ b/src/pages/bidDetail/bidDetail.html
@@ -1,63 +1,61 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Leilão
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content>
-    <ion-toolbar>
-        <ion-segment [(ngModel)]="bidType" (ionChange)="filterBid()" color="primary">
-            <ion-segment-button value="ALL">
-                TODOS
-            </ion-segment-button>
-            <ion-segment-button value="CLOSED">
-                ENCERRADOS
-            </ion-segment-button>
-            <ion-segment-button value="OPENED">
-                EM ANDAMENTO
-            </ion-segment-button>
-        </ion-segment>
-    </ion-toolbar>
-
-  <ion-card *ngFor="let auction of auctions; trackBy index;">
-    <ion-item-divider color="green" text-center *ngIf="auction.isAuctionActive">
-      <ion-label text-left>EM ANDAMENTO</ion-label>
-    </ion-item-divider>
-    <ion-item-divider color="red" text-center *ngIf="!auction.isAuctionActive">
-      <ion-label text-left>ENCERRADO</ion-label>
-      <ion-label text-right></ion-label>  restantes
-    </ion-item-divider>
-
-    <ion-card-content padding style="padding-top: 3%;">
-      <h2>Data de Criação: {{auction.formatedCreationDate}}</h2>
-      <h2>Data de Expiração: {{auction.formatedEndDate}}</h2>
-      <h2>Quantidade de Lances: {{auction.numberOfBids}}</h2>
-    </ion-card-content>
-
+    <ion-navbar>
+      <ion-title>
+        Propostas
+      </ion-title>
+    </ion-navbar>
+  </ion-header>
+  <ion-content>
+  
+    <div *ngFor="let service of pageBudget.services; trackBy index;">
+      <ion-item-group>
+        <ion-item-divider *ngIf="!editable" color="light"><b>{{service.serviceName}}</b></ion-item-divider>
+        <ion-item-divider *ngIf="editable" color="light">{{getServiceName(service.serviceType)}}</ion-item-divider>
+  
+        <div *ngFor="let category of service.categories; trackBy index;">
+          <ion-item-divider *ngIf="!editable" color="grey">{{category.categoryName}}
+          </ion-item-divider>
+          <ion-item-divider *ngIf="editable" color="grey">{{getCategoryName(category.category)}}
+            </ion-item-divider>
+          <div *ngFor="let item of category.items; trackBy index; let last = last">
+            <ion-item>
+              <ion-label *ngIf="!editable">Qtd. de Pessoas - {{item.name}}</ion-label>
+              <ion-label *ngIf="editable">Qtd. de Pessoas - {{getItemName(item.type)}}</ion-label>
+              <ion-select [(ngModel)]="item.peopleQuantity" [disabled]="editable">
+                <ion-option value="10" selected="true">10</ion-option>
+                <ion-option value="20">20</ion-option>
+                <ion-option value="30">30</ion-option>
+                <ion-option value="40">40</ion-option>
+                <ion-option value="50">50</ion-option>
+                <ion-option value="60">60</ion-option>
+                <ion-option value="70">70</ion-option>
+                <ion-option value="80">80</ion-option>
+                <ion-option value="90">90</ion-option>
+                <ion-option value="100">100</ion-option>
+                <ion-option value="150">150</ion-option>
+                <ion-option value="200">200</ion-option>
+              </ion-select>
+            </ion-item>
+            <ion-item>
+              <ion-label>Descrição</ion-label>
+              <ion-input [(ngModel)]="item.description" style="height: 50px;" type="text" [disabled]="editable"></ion-input>
+            </ion-item>
+            <ion-item-divider *ngIf="!last" color="grey"></ion-item-divider>
+          </div>
+        </div>
+      </ion-item-group>
+    </div>
     <ion-item-group>
-      <ion-item-divider color="green" text-center *ngIf="auction.isAuctionActive">
-        Lances
-      </ion-item-divider>
-      <ion-item-divider color="red" text-center *ngIf="!auction.isAuctionActive">
-          Lances
-        </ion-item-divider>
-      <button ion-item>
-        Nenhum lance até o momento!
-      </button>
-      <hr>
+      <ion-item-divider color="grey"></ion-item-divider>
+      <ion-item>
+        <ion-label>Fim do Leilão</ion-label>
+        <ion-datetime *ngIf="!editable" min="2017-09-25" displayFormat="DD MM YYYY, HH:mm" [(ngModel)]="pageBudget.duration" [disabled]="editable"></ion-datetime>
+        <ion-datetime *ngIf="editable" min="2017-09-25" displayFormat="DD MM YYYY, HH:mm" [(ngModel)]="pageBudget.duration" [disabled]="editable"></ion-datetime>
+      </ion-item>
+      <ion-item-divider color="grey"></ion-item-divider>
+      <ion-item>
+        <button *ngIf="!editable" ion-button block outline large (click)="sendBudget(myDate)">Enviar Orçamento</button>
+        <button *ngIf="editable" ion-button block outline large (click)="backToBidPage()">Voltar</button>
+      </ion-item>
     </ion-item-group>
-
-    <ion-row>
-      <ion-col center text-center>
-        <ion-item>
-          <button *ngIf="auction.isAuctionActive" ion-button (click)="showBudgetDetail(auction.budgetId)" color="green" full>Ver Detalhes do Orçamento</button>
-          <button *ngIf="!auction.isAuctionActive" ion-button (click)="showBudgetDetail(auction.budgetId)" color="red" full>Ver Detalhes do Orçamento</button>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-
-  </ion-card>
-
-</ion-content>
+  </ion-content>
