--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,24 @@
 </ion-header>
 <ion-content padding>
 
-  <h1>Olá {{userName}}, {{greeting}}</h1>
+  <ion-card>
+    <ion-item-divider text-center color="primary">
+      <ion-icon item-end name="md-heart" item-start color="light"></ion-icon>
+      <b>Wedding Assist</b>
+      <ion-icon item-end name="md-heart" color="light"></ion-icon>
+    </ion-item-divider>
+    <img src="https://s3.amazonaws.com/wwww.weddingassist.me/1791e95d-5b22-421b-8312-b47f9f0e0f62.jpg" />
+    <ion-card-content>
+      <ion-card-title>
+        <h2>{{greeting}} {{userName}}!</h2>
+      </ion-card-title>
+      <!--<p>
+        The most popular industrial group ever, and largely responsible for bringing the music to a mass audience.
+      </p>-->
+    </ion-card-content>
+  </ion-card>
+
+
 
   <!--<ion-card>
     <ion-card-header>
