added logout button on home screen

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,75 +16,10 @@
       <ion-card-title>
         <h2>{{greeting}} {{userName}}!</h2>
       </ion-card-title>
-      <!--<p>
-        The most popular industrial group ever, and largely responsible for bringing the music to a mass audience.
-      </p>-->
+
     </ion-card-content>
   </ion-card>
 
+  <button style="margin-top: 30px;" ion-button block outline (click)="logout()">Logout</button>
 
-
-  <!--<ion-card>
-    <ion-card-header>
-      <ion-grid>
-        <ion-row>
-          <ion-col col-2>
-            <ion-icon name="alert"></ion-icon>
-          </ion-col>
-          <ion-col col-10>Novo Orçamento</ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card-header>
-    <ion-card-content>
-        Você não possui nenhum leilão em andamento. Clique no botão abaixo para solicitar um orçamento.
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card>
-    <ion-card-header>
-      <ion-grid>
-        <ion-row>
-          <ion-col col-2>
-            <ion-icon name="heart"></ion-icon>
-          </ion-col>
-          <ion-col col-10>Novo lance!</ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card-header>
-    <ion-card-content>
-      A empresa X fez um lance de R$ 5.000 em tudo que você precisa!
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card>
-    <ion-card-header>
-      <ion-grid>
-        <ion-row>
-          <ion-col col-2>
-            <ion-icon name="heart"></ion-icon>
-          </ion-col>
-          <ion-col col-10>Novo lance!</ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card-header>
-    <ion-card-content>
-      A empresa X fez um lance de R$ 5.000 em tudo que você precisa!
-    </ion-card-content>
-  </ion-card>
-
-    <ion-card>
-      <ion-card-header>
-        <ion-grid>
-          <ion-row>
-            <ion-col col-2>
-              <ion-icon name="heart"></ion-icon>
-            </ion-col>
-            <ion-col col-10>Novo lance!</ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-card-header>
-      <ion-card-content>
-        A empresa X fez um lance de R$ 5.000 em tudo que você precisa!
-      </ion-card-content>
-    </ion-card>-->
 </ion-content>
