--- a/src/pages/bid/bid.html
+++ b/src/pages/bid/bid.html
@@ -69,7 +69,7 @@
       </ion-segment>
     </ion-toolbar>
 
-    <ion-card *ngFor="let auction of auctionsFiance; trackBy index;">
+    <ion-card *ngFor="let auction of auctionsFiance; trackBy index; let lst = last;">
       <ion-item-divider color="green" text-center *ngIf="auction.isAuctionActive">
         <ion-label text-left>EM ANDAMENTO</ion-label>
       </ion-item-divider>
@@ -117,9 +117,10 @@
               </ion-col>
             </ion-row>
 
+          <div *ngIf="!lst">
+              <hr>
+          </div>
           
-          <br>
-          <hr>
         </button>
         <hr>
       </ion-item-group>
